# buildblockchain

./: README.md
blockchain/: pyproject.toml
blockchain/blockchain/: blockchain.py
build_a_bc/: pyproject.toml
build_a_bc/tests/: test_build_a_bc.py
chatmessenger/: pyproject.toml
chatmessenger/chatmessenger/: asyncexample.py  chatmessenger.py  chatmessenger_v2.py
chatmessenger/tests/: test_chatmessenger.py
cryptography/: pyproject.toml
cryptography/cryptography/: cryptography.py
funcoin/: pyproject.toml
funcoin/funcoin/: chapter_2.py
node/: node.py  pyproject.toml
node/blockchain/: blockchain.py  connections.py  messages.py  peers.py  schema.py  server.py  utils.py
node/tests/: test_node.py
