[tool.poetry]
name = "node"
version = "0.1.0"
description = ""
authors = ["DarbyBurbidge <darby.burbidge@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyNaCl = "^1.5.0"
structlog = "^22.1.0"
colorama = "^0.4.5"
marshmallow = "^3.17.1"
marshmallow-oneofschema = "^3.0.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
